; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/ddraw/extr_cleanup.c_Cleanup.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/ddraw/extr_cleanup.c_Cleanup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32*, i32*, i32* }
%struct.TYPE_5__ = type { i32* }

@ddgbl = common dso_local global %struct.TYPE_6__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @Cleanup(%struct.TYPE_5__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_5__*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %3, align 8
  %4 = call i32 (...) @DX_WINDBG_trace()
  %5 = load i32*, i32** getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @ddgbl, i32 0, i32 2), align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %7, label %10

7:                                                ; preds = %1
  %8 = load i32*, i32** getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @ddgbl, i32 0, i32 2), align 8
  %9 = call i32 @DxHeapMemFree(i32* %8)
  br label %10

10:                                               ; preds = %7, %1
  %11 = load i32*, i32** getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @ddgbl, i32 0, i32 1), align 8
  %12 = icmp ne i32* %11, null
  br i1 %12, label %13, label %16

13:                                               ; preds = %10
  %14 = load i32*, i32** getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @ddgbl, i32 0, i32 1), align 8
  %15 = call i32 @DxHeapMemFree(i32* %14)
  br label %16

16:                                               ; preds = %13, %10
  %17 = load i32*, i32** getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @ddgbl, i32 0, i32 0), align 8
  %18 = icmp ne i32* %17, null
  br i1 %18, label %19, label %22

19:                                               ; preds = %16
  %20 = load i32*, i32** getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @ddgbl, i32 0, i32 0), align 8
  %21 = call i32 @DxHeapMemFree(i32* %20)
  br label %22

22:                                               ; preds = %19, %16
  %23 = call i32 @DdDeleteDirectDrawObject(%struct.TYPE_6__* @ddgbl)
  %24 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %25 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %24, i32 0, i32 0
  %26 = load i32*, i32** %25, align 8
  %27 = icmp ne i32* %26, null
  br i1 %27, label %28, label %33

28:                                               ; preds = %22
  %29 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %30 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %29, i32 0, i32 0
  %31 = load i32*, i32** %30, align 8
  %32 = call i32 @DxHeapMemFree(i32* %31)
  br label %33

33:                                               ; preds = %28, %22
  %34 = load i32, i32* %2, align 4
  ret i32 %34
}

declare dso_local i32 @DX_WINDBG_trace(...) #1

declare dso_local i32 @DxHeapMemFree(i32*) #1

declare dso_local i32 @DdDeleteDirectDrawObject(%struct.TYPE_6__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
